--- a/src/components/Charts/ChataChart/ChataChart.scss
+++ b/src/components/Charts/ChataChart/ChataChart.scss
@@ -65,15 +65,16 @@
 }
 
 .axis-selector-container {
+  background: var(--react-autoql-background-color-primary);
+  color: var(--react-autoql-text-color-primary);
   z-index: 9999;
-  background: var(--react-autoql-output-background-color);
   padding: 5px 0;
   max-height: 300px;
   min-width: 150px;
   overflow-y: auto;
 
   .axis-select-option.active {
-    background: rgba(0, 0, 0, 0.04);
+    background: var(--react-autoql-hover-color);
   }
   .react-autoql-checkbox {
     margin-left: 20px;
@@ -114,7 +115,7 @@
     margin: 0;
     padding: 0;
     li {
-      color: var(--react-autoql-output-text-color-primary);
+      color: var(--react-autoql-text-color-primary);
       width: 100%;
       height: 30px;
       line-height: 30px;
@@ -126,4 +127,9 @@
       }
     }
   }
+}
+
+.axis-selector-apply-btn {
+  background: var(--react-autoql-background-color-primary);
+  padding: 5px;
 }
