--- a/src/components/Notifications/DataAlerts/DataAlerts.scss
+++ b/src/components/Notifications/DataAlerts/DataAlerts.scss
@@ -1,98 +1,102 @@
-.react-autoql-notification-settings-container {
-  margin: 20px;
-  margin-top: 10px;
-  border-radius: 4px;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
-  background-color: #fff;
-  overflow: hidden;
+.react-autoql-notification-settings {
+  background-color: var(--react-autoql-background-color-secondary);
+  color: var(--react-autoql-text-color-primary);
+  padding-top: 20px;
+  height: 100%;
 
-  .react-autoql-notification-setting-item {
-    height: 55px;
-    line-height: 55px;
-    // border-bottom: 1px solid #0000000a;
+  .react-autoql-notification-settings-container {
+    margin: 20px;
+    margin-top: 10px;
+    border-radius: 4px;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
+    background-color: var(--react-autoql-background-color-primary);
+    overflow: hidden;
 
-    transition: height 0.3s cubic-bezier(0.26, 0.26, 0, 1);
+    .react-autoql-notification-setting-item {
+      height: 55px;
+      line-height: 55px;
+      transition: height 0.3s cubic-bezier(0.26, 0.26, 0, 1);
 
-    &.USER {
+      &.USER {
+        cursor: pointer;
+
+        &:hover {
+          background: rgba(0, 0, 0, 0.01);
+        }
+      }
+
+      .react-autoql-notification-action-btn {
+        opacity: 0;
+        padding-right: 20px;
+        font-size: 16px;
+        transition: all 0.2s ease;
+        color: var(--react-autoql-text-color-primary);
+
+        &:hover {
+          color: var(--react-autoql-accent-color);
+          opacity: 1 !important;
+        }
+      }
+
+      &:hover .react-autoql-notification-action-btn {
+        opacity: 0.5;
+      }
+    }
+
+    .react-autoql-notification-setting-item-header {
+      display: flex;
+      justify-content: space-between;
+      height: 56px;
+      padding-left: 25px;
+      padding-right: 8px;
+      border-bottom: 1px solid
+        var(--react-autoql-border-color, rgba(0, 0, 0, 0.05));
+    }
+
+    .react-autoql-notification-enable-checkbox {
+      margin-bottom: 4px;
+      margin-right: 8px;
+    }
+  }
+
+  .react-autoql-notification-title-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 20px;
+    padding-bottom: 0;
+    color: var(--react-autoql-text-color-primary);
+
+    .react-autoql-notification-add-btn {
+      display: inline-block;
+      height: 35px;
+      width: 35px;
+      border-radius: 20px;
+      background: var(--react-autoql-accent-color, #26a7df);
+      color: white;
+      line-height: 38px;
+      text-align: center;
+      font-size: 20px;
+      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
+      transition: all 0.2s ease;
+      margin-right: 5px;
       cursor: pointer;
 
       &:hover {
-        background: rgba(0, 0, 0, 0.01);
+        box-shadow: 0 1px 3px 0px rgba(0, 0, 0, 0.32);
       }
     }
+  }
 
-    .react-autoql-notification-action-btn {
-      opacity: 0;
-      padding-right: 20px;
-      font-size: 16px;
-      color: rgba(0, 0, 0, 0.5);
-      transition: opacity 0.2s ease;
-
-      &:hover {
-        color: var(--react-autoql-messenger-accent-color);
-      }
+  .react-autoql-notification-setting-display-name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right: 10px;
+    .react-autoql-notification-setting-display-name-title {
     }
-
-    &:hover .react-autoql-notification-action-btn {
-      opacity: 1;
+    .react-autoql-notification-setting-display-name-message {
+      opacity: 0.5;
     }
-  }
-
-  .react-autoql-notification-setting-item-header {
-    display: flex;
-    justify-content: space-between;
-    height: 56px;
-    padding-left: 25px;
-    padding-right: 8px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-  }
-
-  .react-autoql-notification-enable-checkbox {
-    margin-bottom: 4px;
-    margin-right: 8px;
-  }
-}
-
-.react-autoql-notification-settings {
-  margin-top: 20px;
-}
-
-.react-autoql-notification-title-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 5px 20px;
-  padding-bottom: 0;
-
-  .react-autoql-notification-add-btn {
-    display: inline-block;
-    height: 35px;
-    width: 35px;
-    border-radius: 20px;
-    background: var(--react-autoql-messenger-accent-color, #26a7df);
-    color: white;
-    line-height: 38px;
-    text-align: center;
-    font-size: 20px;
-    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
-    transition: all 0.2s ease;
-    margin-right: 5px;
-    cursor: pointer;
-
-    &:hover {
-      box-shadow: 0 1px 3px 0px rgba(0, 0, 0, 0.32);
-    }
-  }
-}
-
-.react-autoql-notification-setting-display-name {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding-right: 10px;
-  .react-autoql-notification-setting-display-name-title {
-  }
-  .react-autoql-notification-setting-display-name-message {
-    opacity: 0.5;
   }
 }
