feat(demo page): add speech training to demo page

--- a/src/components/SpeechToTextButton2/SpeechToTextButton.scss
+++ b/src/components/SpeechToTextButton2/SpeechToTextButton.scss
@@ -27,7 +27,7 @@
 .chat-voice-record-icon {
   vertical-align: top;
 }
-.react-autoql-tooltip {
+.chata-tooltip {
   font-family: inherit;
   letter-spacing: 0.04em;
   padding: 7px 15px;
