fix: "all columns are currently hidden" error message

--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -92,6 +92,7 @@
     font-size: 22px;
     display: block;
     margin-bottom: -13px;
+    text-align: center;
   }
   .eye-icon {
     vertical-align: bottom;
