fix(themes): fix text colour for empty state dashboards and notifications

--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -21,6 +21,7 @@
 
 .empty-dashboard-message-container {
   font-family: var(--react-autoql-font-family);
+  color: var(--react-autoql-text-color-primary);
   letter-spacing: 0.02em;
   text-align: center;
   padding: 100px;
