--- a/src/components/Notifications/NotificationFeed/NotificationFeed.scss
+++ b/src/components/Notifications/NotificationFeed/NotificationFeed.scss
@@ -7,6 +7,12 @@
   background: var(--react-autoql-background-color-secondary);
 }
 
+.empty-notifications-message {
+  color: var(--react-autoql-text-color-primary);
+  text-align: center;
+  margin-top: 100px;
+}
+
 .react-autoql-notification-list-container {
   height: 100%;
   padding: 20px;
