--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -1,3 +1,8 @@
+.react-autoql-icon {
+  position: relative;
+  opacity: 1;
+}
+
 span.react-autoql-icon {
   vertical-align: unset;
   text-align: left;
@@ -5,7 +10,6 @@ span.react-autoql-icon {
   padding: 0;
   float: none !important;
   color: inherit;
-  opacity: 1;
 
   svg {
     float: none !important;
@@ -30,4 +34,16 @@ span.react-autoql-icon {
     height: 1em;
     width: 1em;
   }
+}
+
+.react-autoql-badge {
+  position: absolute;
+  background: #ffcc00;
+  border: 1px solid var(--react-autoql-background-color-primary);
+  width: 0.5em;
+  height: 0.5em;
+  top: -0.1em;
+  right: -0.25em;
+  border-radius: 50%;
+  box-sizing: content-box;
 }
