--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -9,6 +9,7 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
+  color: var(--react-autoql-text-color-primary);
 }
 
 .react-autoql-response-content-container.table {
