refactor: update to new notification endpoints
and change all internal "rule" strings to "data alerts"

--- a/src/components/Notifications/DataAlerts/DataAlerts.scss
+++ b/src/components/Notifications/DataAlerts/DataAlerts.scss
@@ -17,7 +17,7 @@
       line-height: 55px;
       transition: height 0.3s cubic-bezier(0.26, 0.26, 0, 1);
 
-      &.USER {
+      &.CUSTOM {
         cursor: pointer;
 
         &:hover {
