--- a/src/components/Notifications/ExpressionBuilder/ExpressionBuilder.scss
+++ b/src/components/Notifications/ExpressionBuilder/ExpressionBuilder.scss
@@ -32,7 +32,7 @@
 }
 
 // Read only styles
-.notification-rules-container.read-only {
+.data-alerts-container.read-only {
   // pointer-events: none;
   .react-autoql-notification-group-container {
     border: none;
