--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -10,6 +10,7 @@
 
 .dashboard-drilldown-modal {
   .ReactModal__Content {
+    top: unset !important;
     margin-top: 20px !important;
     max-height: 93vh !important;
   }
