--- a/src/components/Notifications/ScheduleBuilder/ScheduleBuilder.scss
+++ b/src/components/Notifications/ScheduleBuilder/ScheduleBuilder.scss
@@ -1,3 +1,9 @@
+.react-autoql-step-container {
+  a {
+    color: var(--react-autoql-accent-color, #26a7df);
+  }
+}
+
 .frequency-date-select-container {
   margin-top: 10px;
 }
@@ -37,5 +43,14 @@
       color: rgba(0, 0, 0, 0.6);
       font-weight: 600;
     }
+  }
+}
+
+.schedule-builder-timezone-section {
+  margin: 10px 5px;
+
+  .react-autoql-timezone-select {
+    display: inline-block;
+    width: 300px;
   }
 }
