feat: Simplify conditions and data return in data alert modal

--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -109,7 +109,7 @@ so we dont have to redraw the whole table */
   outline: none !important;
 }
 .data-limit-warning-icon {
-  color: #ffcc00 !important;
+  color: var(--react-autoql-warning-color) !important;
   position: absolute !important;
   bottom: 2px;
   right: 4px;
