--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -1,6 +1,13 @@
 .react-autoql-icon {
   position: relative;
   opacity: 1;
+
+  &.warning {
+    color: var(--react-autoql-warning-color) !important;
+  }
+  &.danger {
+    color: var(--react-autoql-danger-color) !important;
+  }
 }
 
 span.react-autoql-icon {
@@ -38,7 +45,7 @@ span.react-autoql-icon {
 
 .react-autoql-badge {
   position: absolute;
-  background: #ffcc00;
+  background: var(--react-autoql-warning-color);
   border: 1px solid var(--react-autoql-background-color-primary);
   width: 0.5em;
   height: 0.5em;
