feat(notifications): add showCreateAlertBtn prop to DataAlerts component

--- a/src/components/Notifications/RuleSimple/RuleSimple.scss
+++ b/src/components/Notifications/RuleSimple/RuleSimple.scss
@@ -15,7 +15,7 @@
 
   .react-autoql-rule-second-input-container {
     display: flex;
-    margin: 2px 5px;
+    margin: 2px;
 
     .react-autoql-rule-condition-select {
       flex: 0;
