fix: update classname for notifications tab

--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -392,7 +392,7 @@
       opacity;
     transition-duration: 0.2s;
 
-    &.tips span.react-autoql-icon svg {
+    &.react-autoql-explore-queries span.react-autoql-icon svg {
       height: 22px;
       width: 23px;
     }
