--- a/src/components/Notifications/DataAlerts/DataAlerts.scss
+++ b/src/components/Notifications/DataAlerts/DataAlerts.scss
@@ -17,9 +17,20 @@
       line-height: 55px;
       transition: height 0.3s cubic-bezier(0.26, 0.26, 0, 1);
 
-      &.CUSTOM {
+      .react-autoql-notification-error-status-icon {
+        margin-right: 10px;
         cursor: pointer;
+      }
 
+      .reset-period-info-icon {
+        padding-right: 20px;
+        font-size: 17px;
+        opacity: 1;
+        cursor: pointer;
+        color: var(--react-autoql-accent-color);
+      }
+
+      &.CUSTOM {
         &:hover {
           background: rgba(0, 0, 0, 0.01);
         }
@@ -27,10 +38,11 @@
 
       .react-autoql-notification-action-btn {
         opacity: 0;
-        padding-right: 20px;
+        margin-right: 20px;
         font-size: 16px;
         transition: all 0.2s ease;
         color: var(--react-autoql-text-color-primary);
+        cursor: pointer;
 
         &:hover {
           color: var(--react-autoql-accent-color);
