feat: Improve notification copy

--- a/src/components/Notifications/ScheduleBuilder/ScheduleBuilder.scss
+++ b/src/components/Notifications/ScheduleBuilder/ScheduleBuilder.scss
@@ -35,6 +35,7 @@
       border: 1px solid #ffeb3b;
       border-radius: 4px;
       padding: 20px;
+      margin-left: 20px;
       background: #fffaca;
       color: rgba(0, 0, 0, 0.4);
     }
