remove margin on last child in html message, open links in new tab

--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -21,6 +21,10 @@
   width: 100%;
   overflow: hidden;
   color: var(--react-autoql-text-color-primary);
+
+  > *:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .react-autoql-response-content-container.table {
