--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -22,8 +22,42 @@
   overflow: hidden;
   color: var(--react-autoql-text-color-primary);
 
+  table {
+    th {
+      border-bottom: 2px solid var(--react-autoql-border-color);
+    }
+    tr:not(:last-child) {
+      border-bottom: 1px solid var(--react-autoql-border-color);
+    }
+    td:not(:last-child) {
+      border-right: 1px solid var(--react-autoql-border-color);
+    }
+    th,
+    td {
+      padding: 5px 10px;
+    }
+  }
+
+  * {
+    font-size: inherit;
+  }
+
+  > *:first-child {
+    margin-top: 0 !important;
+  }
+
   > *:last-child {
-    margin-bottom: 0;
+    margin-bottom: 0 !important;
+  }
+
+  caption {
+    display: table-caption;
+    text-align: -webkit-center;
+    padding-top: unset;
+    padding-bottom: unset;
+    color: unset;
+    text-align: unset;
+    caption-side: unset;
   }
 }
 
