--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -42,6 +42,11 @@
     font-size: inherit;
   }
 
+  sup,
+  sub {
+    font-size: 10px;
+  }
+
   > *:first-child {
     margin-top: 0 !important;
   }
