add demo ui overlay

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -33,6 +33,10 @@ body {
   background-image: url('./images/demo_ui.png');
 }
 
+.ui-overlay.theme-1 {
+  background-image: url('./images/theme_1.png');
+}
+
 .dashboard-toolbar-container .ant-btn {
   margin-top: 10px;
 }
