disable explore queries links for qna

--- a/src/components/Cascader/Cascader.scss
+++ b/src/components/Cascader/Cascader.scss
@@ -2,6 +2,7 @@
   position: relative;
   white-space: nowrap;
   overflow: hidden;
+  min-width: 300px;
   // overflow-x: auto;
 
   .options-container {
