--- a/src/components/Notifications/DataAlertModal/DataAlertModal.scss
+++ b/src/components/Notifications/DataAlertModal/DataAlertModal.scss
@@ -14,6 +14,17 @@
   color: var(--react-autoql-success-color);
 }
 
+.expression-invalid-message-container {
+  max-width: 75%;
+  float: left;
+  text-align: left !important;
+  display: flex;
+  flex-direction: row;
+  align-items: left;
+  justify-content: left;
+}
+
 .expression-invalid-message {
   color: var(--react-autoql-danger-color);
+  display: 'inline-block';
 }
