make sure tooltip will not get out of DM page

--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -52,6 +52,10 @@
   width: 100px;
 }
 
+.react-autoql-chart-tooltip {
+  width: 475px;
+}
+
 .react-autoql-drawer .react-autoql-drawer-header-btn {
   line-height: 1em;
   font-weight: normal;
