--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -52,6 +52,9 @@
   width: 100px;
 }
 
+.react-autoql-chart-tooltip {
+}
+
 .react-autoql-drawer .react-autoql-drawer-header-btn {
   line-height: 1em;
   font-weight: normal;
