Ben update nqa demo (#178)
* chore: add functionality for q&a demo

* chore: point to right endpoint for q&a

* chore: fix styling for html messages and do not include intro message for q&a

* remove margin on last child in html message, open links in new tab

* unset max message height for html type messages

* chore: adjust styling for tables in html messages

* set font size of sup and sub for html content

* add theme code prop for customized demo themes

* add demo ui overlay

* add api key field to qna auth

* disable explore queries links for qna

* style: added two new themes for nqa demo

* update package

Co-authored-by: Nikki Moore <nmoore@chata.ai>

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -33,6 +33,18 @@ body {
   background-image: url('./images/demo_ui.png');
 }
 
+.ui-overlay.theme-1 {
+  background-image: url('./images/theme_1.png');
+}
+
+.ui-overlay.theme-2 {
+  background-image: url('./images/theme_2.png');
+}
+
+.ui-overlay.theme-3 {
+  background-image: url('./images/theme_3.png');
+}
+
 .dashboard-toolbar-container .ant-btn {
   margin-top: 10px;
 }
