--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -178,7 +178,7 @@
     font-size: 22px;
 
     &.default-logo {
-      background-color: #26a7df;
+      background-color: var(--react-autoql-accent-color, #26a7df);
       color: #fff;
 
       .react-autoql-bubbles-outlined {
