--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -20,6 +20,14 @@
   align-items: center;
 }
 
+.dashboard-data-limit-warning-icon {
+  color: var(--react-autoql-warning-color) !important;
+  position: absolute !important;
+  bottom: 40px;
+  right: 16px;
+  font-size: 20px;
+}
+
 // Drag handles
 .react-autoql-dashboard-tile-drag-handle {
   transition: opacity 0.3s ease;
