add one comment

--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -20,6 +20,7 @@
   align-items: center;
 }
 
+// Data limit warning tooltip in Dashboardtile
 .dashboard-data-limit-warning-icon {
   color: var(--react-autoql-warning-color) !important;
   position: absolute !important;
