--- a/example/src/index.css
+++ b/example/src/index.css
@@ -49,6 +49,10 @@ body {
   background-image: url('./images/theme_4.png');
 }
 
+.ui-overlay.theme-5 {
+  background-image: url('./images/theme_5.png');
+}
+
 .dashboard-toolbar-container .ant-btn {
   margin-top: 10px;
 }
