--- a/example/src/index.css
+++ b/example/src/index.css
@@ -73,6 +73,10 @@ body {
   background-image: url('./images/theme_10.png');
 }
 
+.ui-overlay.theme-11 {
+  background-image: url('./images/theme_11.png');
+}
+
 .dashboard-toolbar-container .ant-btn {
   margin-top: 10px;
 }
