--- a/example/src/components/Rating/Ratings.scss
+++ b/example/src/components/Rating/Ratings.scss
@@ -1,6 +1,7 @@
 @import url(http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 
 .rating-style {
-  color: rgb(255, 238, 0);
-  background-color: rgb(60, 27, 87);
+  color: #ffd700;
+  padding: 5px;
+  float: left;
 }
