completed demo page styling  (#226)
* fix(queryinput): previous query fix

pressing the up arrow key now returns previous query even after changing tabs inside of the DM
widget

AC-991

* fix: tooltips on multiseries data

tooltips now render on multi series data charts

AC-1195

* cleanup

* fix(chatmessage): removed datalimit overlap

removed data limit icon when all calumns are hidden

AC-1006

* chore: update rating component

* help setting up custom component

* cleanup

* wip

* rating-style fixes

* style and  spacing fixes

* update sentimentAnalysis with all edits from ben-lujaina-help branch

* updating rating component from ben-lujaina-help branch

* feat: control signal input, admin control panel, half-star rating+clear,V2.1 model input+switch

An input bar for control signals has been added at the top, and value is stored seperately. The star
feature now supports half+rates, and gets cleared with the 'clear' button.An admin panel containing
"API key", "username", "password", etc. has been redirected to the bottom of the page. The old V1
model has been replaced with a V2.1 model, which can be chosen to be displayed via a toggle switch.
All references to "V2" and "V2.1" have been replaced by "newer model" and "older model."

* remove comments

Co-authored-by: Ben-CHATA <bwozak@chata.ai>

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -100,3 +100,29 @@ body {
 .chat-voice-record-button {
   margin: 10px;
 }
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 90px;
+  height: 34px;
+  margin-top: 10px;
+}
+
+.switch input {
+  display: none;
+}
+
+#clear-rating-button {
+  margin-top: 25px;
+  padding: 5px;
+  float: left;
+}
+
+#submit-form-button {
+  margin-bottom: 15px;
+}
+
+#toggle-switch {
+  margin-top: 20px;
+}
